lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:11: error: value foreach is not a member of Range.Partial[Double,scala.collection.immutable.NumericRange[Double]]
		for (k<-j+1 to j+50) {
                            ^Lander:19: error: type mismatch;
 found   : Double
 required: Int
		if (estSolPlat(i)) {a=i;b=getSol()(i).y}
                                                      ^